syntax = "proto3";

option go_package = "proto/product";

service ProductService {
    rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
    rpc UpsertProduct(UpsertProductRequest) returns (UpsertProductResponse) {}
    rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {}
}

message Product {
    int32 id = 1;
    enum Category {
        CLOTHES = 0;
        ELECTRONICS = 1;
        BOOKS = 2;
    };
    Category category = 2;
    string description = 3;
    double price = 4;
}

message GetProductRequest {
    int32 id = 1;
}

message GetProductResponse {
    Product product = 1;
}

message UpsertProductRequest {
    Product product = 1;
}

message UpsertProductResponse {
    Product product = 1;
}

message DeleteProductRequest {
    int32 id = 1;
}

message DeleteProductResponse {
}